Fixed CSS Fixed spacing on logo text. Fixed height of footer.
MODIFIED: footer.css
MODIFIED: header.css

--- a/css/header.css
+++ b/css/header.css
@@ -35,6 +35,8 @@
   font-size: 16px;
   padding-top: 16px;
   padding-bottom: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .header-item {
